[project]
name = "distribution-analysis"
version = "0.1.0"
description = "Find quanaitzed model input/weight distribution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "datasets==4.0.0",
    "transformers==4.52.1",
    "ipykernel>=6.29.0",
    "matplotlib",
]
